# parsimonious

./: setup.cfg
