[metadata]
name = parsimonious
version = 0.8.1
author = Erik Rose
author_email = erikrose@grinchcentral.com
license = MIT
description = (Soon to be) the fastest pure-Python PEG parser I could muster
keywords =
    parse
    parser
    parsing
    peg
    packrat
    grammar
    language
url = https://github.com/erikrose/parsimonious
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: General

[options]
packages = find:
install_requires = six>=1.9.0
include_package_data = True
tests_require = nose
